Replaced find_vector_from_diff with chebyshev distance lookup table. Fixed move generation/validation bugs.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "chess-engine"
 version = "0.1"
+dependencies = ["numpy"]
 description = "A chess engine packaged with a board representation."
 readme = "README.md"
