--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 .vscode/*
 .venv/*
+scripts/engine_output.txt
+scripts/stockfish_output.txt
 src/chess_engine.egg-info/*
 src/chess_engine/__pycache__/*
 tests/__pycache__/*
